# c-compiler

./: .clang-format  .clang-tidy  .gitignore  CCompiler.sln  CMakeLists.txt  README.md
CCompiler/: CCompiler.vcxproj  CCompiler.vcxproj.filters
CCompiler/src/: definitions.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  symbol_table.h  token.h  token_type.h
CCompiler/src/syntax/: binary_expression.h  compound_statement.h  declaration.h  declaration_reference_expression.h  expression.h  function_declaration.h  literal.h  parenthesized_expression.h  primary_expression.h  return_statement.h  statement.h  syntax_node.h  syntax_type.h  translation_unit_declaration.h  variable_declaration.h
grammar/: c_syntax.ebnf
src/: definitions.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  symbol_table.h  token.h  token_type.h
src/syntax/: binary_expression.h  compound_statement.h  declaration.h  declaration_reference_expression.h  expression.h  function_declaration.h  literal.h  parenthesized_expression.h  primary_expression.h  return_statement.h  statement.h  syntax_node.h  syntax_type.h  translation_unit_declaration.h  variable_declaration.h
